# MedMemory

./: .gitignore  FULL_STACK_REPORT.md  FULL_TECHNICAL_REPORT.md  KAGGLE_MEDGEMMA_SUBMISSION_PLAN_FEB_2026.md  KAGGLE_MEDGEMMA_WRITEUP_DRAFT_V1_FEB_2026.md  README.md  TESTING_STRATEGY.md  docker-compose.dev.yml  docker-compose.local-backend.dev.yml  docker-compose.local-backend.yml  docker-compose.staging.yml  docker-compose.yml  start-hybrid.sh  start-services.sh  status-hybrid.sh  stop-hybrid.sh
backend/: .dockerignore  .env.example  .env.staging.example  ARCHITECTURE_REVIEW.md  Dockerfile  ERROR_REPORT.md  HYBRID_SETUP_FIXES.md  MODEL_SETUP.md  README.md  RUNTIME_REVIEW.md  STATUS_REPORT.md  alembic.ini  check_model.py  pyproject.toml  run_tests.sh  start-backend.sh  test_model.py
backend/alembic/: env.py
backend/alembic/versions/: 20250101_00_baseline.py  20250101_01_add_patient_user_id.py  20250101_02_add_performance_indexes.py  20250101_03_add_ocr_refinement_fields.py  20250102_00_add_password_reset_fields.py  20250126_00_add_profile_dependents.py  20250129_00_doctor_dashboard_phase1.py  20260212_00_add_token_blacklist.py  20260214_00_switch_memory_chunk_index_to_hnsw.py  20260217_00_add_dashboard_foundations.py  20260217_01_add_dashboard_alert_details_and_sync_events.py  20260218_00_add_metric_daily_summary.py  20260224_00_add_apple_health_steps_daily.py  20260307_00_add_clinician_copilot_runs.py  20260311_00_add_conversation_message_structured_data.py
backend/app/: __init__.py  config.py  database.py  logging.py  main.py  speech_service.py
backend/app/api/: __init__.py  apple_health.py  auth.py  chat.py  (+15 more)
backend/scripts/: README.md  apply_provider_sync_env.py  build_rag_benchmark_dataset.py  build_real_usecase_dataset.py  build_retriever_triplets.py  cleanup_eval_fixtures.py  download_embeddings.py  download_model.py  dry_run_provider_connections.py  ensure_schema_ready.py  evaluate_baseline_vs_qlora.py  evaluate_rag_hallucination.py  evaluate_retrieval_pipeline.py  evaluate_speech_transcription.py  hallucination_regression_gate.py  materialize_waxal_swa_tts.py  mock_swa_tts_external_trainer.py  prepare_swa_tts_finetune.py  qlora_eval_utils.py  reindex_memory_embeddings.py  run_clinician_copilot_smoke.py  run_qlora_experiment.py  run_real_medgemma_smoke.py  run_speech_chat_smoke.py  run_swa_tts_finetune.py  swa_tts_trainer_adapter.py  train_qlora_on_usecases.py  train_retriever_biencoder.py  validate_speech_eval_manifest.py
backend/tests/: conftest.py  test_api_modules.py  test_apple_health_api.py  test_auth_api.py  test_build_retriever_triplets.py  test_chat_api.py  test_clinician_copilot.py  test_config_and_app.py  test_context_api.py  test_crosscutting.py  test_dashboard_api.py  test_database_init_retry.py  test_dependents_api.py  test_documents_access_control.py  test_evaluate_rag_hallucination.py  test_evaluate_retrieval_pipeline.py  test_evaluate_speech_transcription.py  test_hallucination_regression_gate.py  test_health_api.py  test_imports.py  test_ingestion_api.py  test_llm_model_service.py  test_llm_openai_fallback.py  test_memory_api.py  test_models.py  test_multilingual.py  test_ocr_refinement.py  test_patients_access_control.py  test_patients_api.py  test_prepare_swa_tts_finetune.py  test_profile_api.py  test_profile_api_unit.py  test_provider_sync.py  test_qlora_eval_utils.py  test_real_medgemma_inference.py  test_records_access_control.py  test_records_api.py  test_run_swa_tts_finetune.py  test_schemas.py  test_services_context.py  (+13 more)
(+301 files in other folders)
