[project]
name = "medmemory-backend"
version = "0.1.0"
description = "MedMemory: A Unified, Local-First Medical Memory for Human-Centered EHR Question Answering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    
    # Database - PostgreSQL + pgvector
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "alembic>=1.14.0",
    
    # ML & Embeddings
    "sentence-transformers>=3.3.0",
    "transformers>=4.47.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "accelerate>=1.2.0",
    "huggingface-hub>=0.24.0",
    "bitsandbytes>=0.43.0; platform_system != 'Darwin' or platform_machine == 'arm64'",
    
    # Document Processing
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "pillow>=11.0.0",
    "pytesseract>=0.3.13",
    "opencv-python>=4.10.0.84",
    
    # Utilities
    "python-dateutil>=2.9.0",
    "aiofiles>=24.1.0",
    "numpy>=2.0.0",
    "email-validator>=2.3.0",
    
    # Authentication
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:.*SwigPyPacked has no __module__ attribute.*:DeprecationWarning",
  "ignore:.*SwigPyObject has no __module__ attribute.*:DeprecationWarning",
  "ignore:.*swigvarlink has no __module__ attribute.*:DeprecationWarning",
  "ignore:.*'crypt' is deprecated.*:DeprecationWarning",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
